Fix follower wrap problem

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,8 @@
 }
 
 /* danmuku poll wrap fix */
-.bili-danmaku-x-vote-an-num {
+.bili-danmaku-x-vote-an-num,
+.vui_sidebar-item-right {
   white-space: nowrap;
 }
 
